# SQL_ProxyServer

./: CMakeLists.txt  README.md  client.py  default.conf  test.cpp
boostTest/: bindTest.cpp  main.cpp  proxy.cpp  tcpClient.cpp  tcpServer.cpp
boostTest/async/: CMakeLists.txt  client.cpp  server.cpp
configs/: config.conf
logfiles/: logfile.txt
proxyServer/: CMakeLists.txt  config.conf
proxyServer/srcs/: main.cpp
proxyServer/srcs/Client/: Client.hpp
proxyServer/srcs/Server/: Server.cpp  Server.hpp
srcBoostProxyServer/: CMakeLists.txt  Connector.cpp  Connector.h  Connector_data_from_Client_to_DB.cpp  Connector_data_from_DB_toClient.cpp  ProxyServer.cpp  ProxyServer.h  ProxyServer.hpp  config.conf  main.cpp
srcBoostProxyServer/srcs/: Connector.cpp  Connector.h  Connector_data_from_Client_to_DB.cpp  Connector_data_from_DB_toClient.cpp  ProxyServer.cpp  ProxyServer.hpp  main.cpp
srcs/: main.cpp
srcs/Client/: Client.cpp  Client.hpp
srcs/Server/: Server.cpp  Server.hpp
